--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -31,6 +31,7 @@
             android:layout_weight="90"
             android:textColor="@color/black"
             android:hint="Write a message"
+            android:textColorHint="@color/black"
             android:layout_marginLeft="10dp"
             android:paddingLeft="10dp"
             android:layout_marginBottom="5dp"
